brush-parser/src/parser/tests/snapshots/brush_parser__parser__tests__compound_commands__parse_arith_and_non_arith_parens.snap
---
source: brush-parser/src/parser/tests/compound_commands.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "( : && ( (( 0 )) || : ) )",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Compound(Subshell(SubshellCommand(
                list: CompoundList([
                  CompoundListItem(AndOrList(
                    first: Pipeline(
                      seq: [
                        Simple(SimpleCommand(
                          word_or_name: Some(Word(
                            value: ":",
                            loc: "[location]",
                          )),
                        )),
                      ],
                    ),
                    additional: [
                      And(Pipeline(
                        seq: [
                          Compound(Subshell(SubshellCommand(
                            list: CompoundList([
                              CompoundListItem(AndOrList(
                                first: Pipeline(
                                  seq: [
                                    Compound(Arithmetic(ArithmeticCommand(
                                      expr: UnexpandedArithmeticExpr(
                                        value: " 0 ",
                                      ),
                                      loc: "[location]",
                                    )), None),
                                  ],
                                ),
                                additional: [
                                  Or(Pipeline(
                                    seq: [
                                      Simple(SimpleCommand(
                                        word_or_name: Some(Word(
                                          value: ":",
                                          loc: "[location]",
                                        )),
                                      )),
                                    ],
                                  )),
                                ],
                              ), Sequence),
                            ]),
                            loc: "[location]",
                          )), None),
                        ],
                      )),
                    ],
                  ), Sequence),
                ]),
                loc: "[location]",
              )), None),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
